<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_group_follow_up">
            <menu>
                <item
                    android:id="@+id/nav_myday"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_myday" />
                <item
                    android:id="@+id/nav_weight"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_weight" />
                <item
                    android:id="@+id/nav_photos"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_photos" />
                <item
                    android:id="@+id/nav_measurements"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_measurements" />
                <item
                    android:id="@+id/nav_sport_activity"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_sport_activity" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_settings" />
            </menu>
        </item>
    </group>

</menu>
